@@ -1,6 +1,8 @@
 Revision history for Perl extension App::Sqitch
 
 0.994
+     - Fixed installation failure due to missing IO::File module on Windows.
+     - Fixed file test failure for the Oracle engine on Windows.
 
 0.993  2014-06-04T20:14:34Z
      - Fixed engine loading to prefer the engine implied by the target URI
